--- a/gb/23/12/2/n14128270.md
+++ b/gb/23/12/2/n14128270.md
@@ -1,29 +1,29 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>卡城灰鹰度假村7大活动 庆祝圣诞新年</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/12/id14128322-20231122-Grey-Eagle-Resort-Casino-Christmas-09-600x400.jpg" />
 <h6>节日快乐！（灰鹰度假村提供）
 </h6>
 <hr>
 <p>【大纪元2023年12月02日讯】白雪飘飞，处处银妆素裹；夜幕降临，家家彩灯璀璨。伴随着街头上、商场里欢快的歌声，2023年底的节日季氛围越发地浓厚。</p>
-<p>虽说平实的物价如同离家的少女，看不到返回的迹象，但毕竟马仍需跑，舞仍需跳，生活仍需日日度过，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%9C%A3%E8%AF%9E.md#1">圣诞</a><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%96%B0%E5%B9%B4.md#1">新年</a>也照旧需要庆祝。看看卡尔加里<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%81%B0%E9%B9%B0%E5%BA%A6%E5%81%87%E6%9D%91.md#1">灰鹰度假村</a>的7大活动，安排全家其乐融融，共度一个可负担的假期吧。</p>
-<p><strong>1 每日<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%9C%A3%E8%AF%9E.md#1">圣诞</a>自助午餐：</strong>12月1日～25日，11:00am～2:30pm，$21.99 + 税。提供所有节日美食，包括火鸡、烤肉、火腿、土豆泥、肉汁、烤蔬菜、馅料，以及亚洲菜肴。</p>
-<figure id="attachment_14128326" aria-describedby="caption-attachment-14128326" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/12/id14128326-20231122-Grey-Eagle-Resort-Casino-Christmas-00.jpg"><img class="size-large wp-image-14128326" src="https://i.epochtimes.com/assets/uploads/2023/12/id14128326-20231122-Grey-Eagle-Resort-Casino-Christmas-00-600x416.jpg" alt="" width="600" b="416" /></a><figcaption id="caption-attachment-14128326" class="wp-caption-text">节日自助餐。<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%81%B0%E9%B9%B0%E5%BA%A6%E5%81%87%E6%9D%91.md#1">灰鹰度假村</a>提供）</figcaption></figure>
-<figure id="attachment_14128327" aria-describedby="caption-attachment-14128327" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/12/id14128327-20231122-Grey-Eagle-Resort-Casino-Christmas-02.jpg"><img class="size-large wp-image-14128327" src="https://i.epochtimes.com/assets/uploads/2023/12/id14128327-20231122-Grey-Eagle-Resort-Casino-Christmas-02-600x314.jpg" alt="" width="600" b="314" /></a><figcaption id="caption-attachment-14128327" class="wp-caption-text">节日自助餐。（灰鹰度假村提供）</figcaption></figure>
+<p>虽说平实的物价如同离家的少女，看不到返回的迹象，但毕竟马仍需跑，舞仍需跳，生活仍需日日度过，圣诞新年也照旧需要庆祝。看看卡尔加里灰鹰度假村的7大活动，安排全家其乐融融，共度一个可负担的假期吧。</p>
+<p><strong>1 每日圣诞自助午餐：</strong>12月1日～25日，11:00am～2:30pm，$21.99 + 税。提供所有节日美食，包括火鸡、烤肉、火腿、土豆泥、肉汁、烤蔬菜、馅料，以及亚洲菜肴。</p>
+<figure id="attachment_14128326" aria-describedby="caption-attachment-14128326" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/12/id14128326-20231122-Grey-Eagle-Resort-Casino-Christmas-00.jpg"><img loading="lazy" decoding="async" class="size-large wp-image-14128326" src="https://i.epochtimes.com/assets/uploads/2023/12/id14128326-20231122-Grey-Eagle-Resort-Casino-Christmas-00-600x416.jpg" alt="" width="600" b="416" /></a><figcaption id="caption-attachment-14128326" class="wp-caption-text">节日自助餐。（灰鹰度假村提供）</figcaption></figure>
+<figure id="attachment_14128327" aria-describedby="caption-attachment-14128327" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/12/id14128327-20231122-Grey-Eagle-Resort-Casino-Christmas-02.jpg"><img loading="lazy" decoding="async" class="size-large wp-image-14128327" src="https://i.epochtimes.com/assets/uploads/2023/12/id14128327-20231122-Grey-Eagle-Resort-Casino-Christmas-02-600x314.jpg" alt="" width="600" b="314" /></a><figcaption id="caption-attachment-14128327" class="wp-caption-text">节日自助餐。（灰鹰度假村提供）</figcaption></figure>
 <p><strong>2 圣诞自助晚餐：</strong>12月每周一、周二晚，$23.99 + 税。</p>
-<figure id="attachment_14128325" aria-describedby="caption-attachment-14128325" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/12/id14128325-20231122-Grey-Eagle-Resort-Casino-Christmas-05.jpg"><img class="size-large wp-image-14128325" src="https://i.epochtimes.com/assets/uploads/2023/12/id14128325-20231122-Grey-Eagle-Resort-Casino-Christmas-05-600x1000.jpg" alt="" width="600" b="1000" /></a><figcaption id="caption-attachment-14128325" class="wp-caption-text">节日自助餐。（灰鹰度假村提供）</figcaption></figure>
+<figure id="attachment_14128325" aria-describedby="caption-attachment-14128325" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/12/id14128325-20231122-Grey-Eagle-Resort-Casino-Christmas-05.jpg"><img loading="lazy" decoding="async" class="size-large wp-image-14128325" src="https://i.epochtimes.com/assets/uploads/2023/12/id14128325-20231122-Grey-Eagle-Resort-Casino-Christmas-05-600x1000.jpg" alt="" width="600" b="1000" /></a><figcaption id="caption-attachment-14128325" class="wp-caption-text">节日自助餐。（灰鹰度假村提供）</figcaption></figure>
 <p><strong>3 圣诞日：</strong>照常开放，满足你所有的餐饮和娱乐需求！</p>
 <p><strong>4 article content begin -->0,000假期赠品：</strong>12月3日～26日，周日、周一或周二购买一份自助晚餐，或周日、周一或周二在火焰酒吧烧烤（Blaze Bar &amp; Grill）购买一份主菜，即可获得一个神秘信封！请不要拆开，并于2024年1月1日至1月31日期间回来领取奖品。奖品包括10元免费老虎机游戏、火焰酒吧烧烤20%折扣、自助餐券或75英寸智能电视。</p>
-<figure id="attachment_14128331" aria-describedby="caption-attachment-14128331" style="width: 400px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/12/id14128331-20231122-Grey-Eagle-Resort-Casino-Christmas-07.jpg"><img class="size-full wp-image-14128331" src="https://i.epochtimes.com/assets/uploads/2023/12/id14128331-20231122-Grey-Eagle-Resort-Casino-Christmas-07.jpg" alt="" width="400" b="599" /></a><figcaption id="caption-attachment-14128331" class="wp-caption-text">article content begin -->0,000假期赠品。（灰鹰度假村提供）</figcaption></figure>
+<figure id="attachment_14128331" aria-describedby="caption-attachment-14128331" style="width: 400px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/12/id14128331-20231122-Grey-Eagle-Resort-Casino-Christmas-07.jpg"><img loading="lazy" decoding="async" class="size-full wp-image-14128331" src="https://i.epochtimes.com/assets/uploads/2023/12/id14128331-20231122-Grey-Eagle-Resort-Casino-Christmas-07.jpg" alt="" width="400" b="599" /></a><figcaption id="caption-attachment-14128331" class="wp-caption-text">article content begin -->0,000假期赠品。（灰鹰度假村提供）</figcaption></figure>
 <p><strong>5 圣诞节倒计时：</strong>从12月1日开始，有25天的奖品可供拿取。加入每天晚上9点的抽奖活动，你就有机会获得灰鹰度假村赠送的一份特别礼物！</p>
-<figure id="attachment_14128329" aria-describedby="caption-attachment-14128329" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/12/id14128329-20231122-Grey-Eagle-Resort-Casino-Christmas-06.jpg"><img class="size-medium wp-image-14128329" src="https://i.epochtimes.com/assets/uploads/2023/12/id14128329-20231122-Grey-Eagle-Resort-Casino-Christmas-06-450x674.jpg" alt="" width="450" b="674" /></a><figcaption id="caption-attachment-14128329" class="wp-caption-text">圣诞节倒计时。（灰鹰度假村提供）</figcaption></figure>
+<figure id="attachment_14128329" aria-describedby="caption-attachment-14128329" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/12/id14128329-20231122-Grey-Eagle-Resort-Casino-Christmas-06.jpg"><img loading="lazy" decoding="async" class="size-medium wp-image-14128329" src="https://i.epochtimes.com/assets/uploads/2023/12/id14128329-20231122-Grey-Eagle-Resort-Casino-Christmas-06-450x674.jpg" alt="" width="450" b="674" /></a><figcaption id="caption-attachment-14128329" class="wp-caption-text">圣诞节倒计时。（灰鹰度假村提供）</figcaption></figure>
 <p><strong>6 跨年午时：</strong>Elvis Evolution猫王模仿秀特别表演，舞台酒吧（Stage Bar），12:00pm～2pm；自助午餐，11:00am～2:30pm，$21.99 + 税；$2,024现金抽奖，4pm。</p>
-<figure id="attachment_14128330" aria-describedby="caption-attachment-14128330" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/12/id14128330-20231122-Grey-Eagle-Resort-Casino-Christmas-08.jpg"><img class="size-medium wp-image-14128330" src="https://i.epochtimes.com/assets/uploads/2023/12/id14128330-20231122-Grey-Eagle-Resort-Casino-Christmas-08-450x672.jpg" alt="" width="450" b="672" /></a><figcaption id="caption-attachment-14128330" class="wp-caption-text">跨年午时。（灰鹰度假村提供）</figcaption></figure>
+<figure id="attachment_14128330" aria-describedby="caption-attachment-14128330" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/12/id14128330-20231122-Grey-Eagle-Resort-Casino-Christmas-08.jpg"><img loading="lazy" decoding="async" class="size-medium wp-image-14128330" src="https://i.epochtimes.com/assets/uploads/2023/12/id14128330-20231122-Grey-Eagle-Resort-Casino-Christmas-08-450x672.jpg" alt="" width="450" b="672" /></a><figcaption id="caption-attachment-14128330" class="wp-caption-text">跨年午时。（灰鹰度假村提供）</figcaption></figure>
 <p><strong>7 跨年夜：</strong>与灰鹰度假村一起迎接2024年；乡村乐队Foxx Worthee现场表演，舞台酒吧，9:30pm～1:30am；牛排自助晚餐，$39.99 + 税，附赠气泡酒，4:30pm～10:30pm。</p>
 <h2>灰鹰度假村设施</h2>
-<p>灰鹰度假村位于卡城西南城市边界的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8E%9F%E4%BD%8F%E6%B0%91.md#1">原住民</a>──储蒂那民族（Tsuut&#8217; ina Nation）保护区，占地广阔，是卡城最大、最奢华的休闲娱乐一体化好去处。</p>
-<figure id="attachment_14128332" aria-describedby="caption-attachment-14128332" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/12/id14128332-20231122-Grey-Eagle-Resort-Casino-Christmas-04.jpg"><img class="size-medium wp-image-14128332" src="https://i.epochtimes.com/assets/uploads/2023/12/id14128332-20231122-Grey-Eagle-Resort-Casino-Christmas-04-450x313.jpg" alt="" width="450" b="313" /></a><figcaption id="caption-attachment-14128332" class="wp-caption-text">（灰鹰度假村提供）</figcaption></figure>
+<p>灰鹰度假村位于卡城西南城市边界的原住民──储蒂那民族（Tsuut&#8217; ina Nation）保护区，占地广阔，是卡城最大、最奢华的休闲娱乐一体化好去处。</p>
+<figure id="attachment_14128332" aria-describedby="caption-attachment-14128332" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/12/id14128332-20231122-Grey-Eagle-Resort-Casino-Christmas-04.jpg"><img loading="lazy" decoding="async" class="size-medium wp-image-14128332" src="https://i.epochtimes.com/assets/uploads/2023/12/id14128332-20231122-Grey-Eagle-Resort-Casino-Christmas-04-450x313.jpg" alt="" width="450" b="313" /></a><figcaption id="caption-attachment-14128332" class="wp-caption-text">（灰鹰度假村提供）</figcaption></figure>
 <p><strong>灰鹰赌场：</strong>大型赌场内有超过1000台老虎机、40多张游戏桌，每周7天，每天24小时，全天候开放。</p>
 <p><strong>灰鹰酒店：</strong>4星级，可欣赏美丽的储蒂那民族居住地全景，设施与服务包括游泳池、热水浴缸、健身中心、大厅免费报纸、无限本地通话、免费停车、免费季节性自行车租赁等。</p>
 <p><strong>灰鹰活动中心：</strong>世界一流的活动场地，价值200万元的灯光、音频、视频和舞台操作；卡尔加里最大的音乐会场地之一，可容纳2500～2900名观众；最先进的多功能会议场所，设有8间可转换的会议室和活动室、面积达24,000平方英尺的展览空间等。</p>
@@ -31,37 +31,41 @@
 <p>（本文系工商报导，相关资讯由商家提供，不代表本报社观点。）</p>
 <p>责任编辑：齐守善</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/23/n14122274.md#1">世卫要求北京说明儿童肺炎激增详情</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/23/n14122504.md#1">多种病毒流行 世卫要求说明 中国怎么了？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/11/n14134360.md#1">报告：中共加强对维权人士家属的株连迫害</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/5/n14130100.md#1">中国个人债务危机潮到来 “老赖”人数激增</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/12/n14135076.md#1">羊毛衫不缩水不掉色 这种洗衣液是关键</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/10/n14133310.md#1">亚马逊8款热卖居家好物 可享受圣诞节折扣</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/17/11/23/n9885913.md#1">加国经济复苏  滑雪度假物业再红火</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/2/6/n10120451.md#1">【工商】体验卡城西面Stoney Nakoda度假酒店</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/3/17/n13651847.md#1">小赌城的吃货天堂</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/8/24/n13809398.md#1">原住民族与现代娱乐的相见欢</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/12/8/n13880562.md#1">圣诞新体验──卡城灰鹰度假村15周年庆大礼包</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/4/21/n13977924.md#1">鹰翅之下 与美食相遇</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/8/29/n14062905.md#1">房价涨不停 加拿大旅游景区居民无奈离开</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/31/n14301805.md#1">贾斯珀国家公园世纪火灾 烧毁三分之一小镇</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14286368.md#1">不欢不散 吃喝玩乐过一天</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14286357.md#1">上萌下笑的狗明星表演</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/17/10/29/n9782865.md#1" target="_blank">你不了解的邓小平：反右运动总指挥（上）</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/10/11/n11582447.md#1" target="_blank">在中国经商 有这样一群可信赖的生意人</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/2/n10947759.md#1" target="_blank">传奇总统里根（5）：竞选总统 众望所归</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/8/9/11/n2259267.md#1" target="_blank">法轮功简介</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/8/n14132234.md#1">人身有多难得？聊斋中的轮回故事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/20/n14119976.md#1">雨霖铃?李克强之死</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/18/n14138664.md#1">冬至知多少？冬至文化典故与民俗集锦</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/7/n14131486.md#1">郑和七下西洋成功完成使命 背后显现神秘力量</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/17/n14137969.md#1">美国防承包商称 蛋形UFO曾保存在51区</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/20/n14140593.md#1">【全球新闻】掩盖地震真相 中共拒绝外援</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/21/n14141326.md#1">【马克时空】2023年SpaceX星链爆发成长</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/20/n14140621.md#1">【菁英论坛】AI自主武器将现 人类面临奇异点</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/19/n14139504.md#1">甘肃临夏州地震 大规模伤亡引质疑</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/19/n14139407.md#1">万达酒店突发公告 集团前总裁失联百余日</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/18/n14138885.md#1">中金预测十估九错 专家：中国经济很难救了</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/18/n14139107.md#1">周海媚接种新冠疫苗信息遭百度删除 网友热议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/19/n14139785.md#1">杨幂着15公斤礼服 累到在电梯里两度面壁</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/20/n14139880.md#1">两次被主持人说错一电影名 梁朝伟一脸尴尬</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/18/n14139030.md#1">朱丹自曝遭好友骗光积蓄 意外引来闺密喊告</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/20/n14140599.md#1">为妻治病花光积蓄且欠债 港导演彭发申请破产</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">每日更新：舒适使用笔电 银色支架近6折优惠</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/19/n14139212.md#1">日女子不运动成功减肥10公斤 秘诀是9个好习惯</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117110.md#1">Guess Seducing 75 毫升喷雾淡香水70%折扣</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/6/n14130699.md#1">蜂蜜止咳胜抗生素 五代中医传人: 这样吃很有效</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/2/n14128535.md#1">有冬季抑郁？ 1种饮食是解郁良方 让你越吃越快乐</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/30/n14301175.md#1">一两黄金一块砖 紫禁城“金砖”怎地这么高贵？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303783.md#1">【未解之谜】美国日全食开启灾难之门 比格斯预言盘点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300489.md#1">“别人”做的饭菜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304683.md#1">【未解之谜】灵异阿拉斯加 黑暗金字塔的秘密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306679.md#1">【菁英论坛】股市大震荡 如何冲击全球经济</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306133.md#1">【新闻欣视角】中国富豪“润”更多 中共又失老朋友</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306705.md#1">【马克时空】乌克兰F-16终成军 配什么武器</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14305316.md#1">分析：金价创历史新高 或反过来抑制需求</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14305216.md#1">唐山打人事件再引关注 警察异地实名举报</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14305084.md#1">【更新】2024年巴黎奥运奖牌榜 8月5日</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14304932.md#1">《龙卷风暴》全球票房不敷成本 8月线上发行</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14304841.md#1">TWICE周子瑜首张个人专辑 9月6日发行</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14305321.md#1">陈思诚新片《解密》票房遇冷 估计至少亏3亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306143.md#1">《死侍与金钢狼》票房惊人 席琳·狄翁逗趣恭喜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14305052.md#1">《星际异攻队》10年前被看衰 “星爵”从傻蛋翻身</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305693.md#1">飞机快起飞了还在排安检怎么办？旅游达人提2方法</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304554.md#1">蔬菜煎蛋加什么“菜”最对味？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14305178.md#1">嫩化牛排简单用一物 你的橱柜里就有</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14304786.md#1">蛋黄越橘越营养？营养师揭鸡蛋6大迷思</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/26/n14298933.md#1">常常咳嗽吗？2食疗帮你摆脱反复久咳</a></li>
 <hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/12/2/n14128270.htm">卡城灰鹰度假村7大活动 庆祝圣诞新年</a></p><hr>
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/12/2/n14128270.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/12/2/n14128270.htm">卡城灰鹰度假村7大活动 庆祝圣诞新年</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/12/2/n14128270.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
